🚀 switch to rocketpy

--- a/settings.ini
+++ b/settings.ini
@@ -8,7 +8,7 @@ lib_name = orbital
 
 user = lukexyz
 description = Orbital mechanics playground
-keywords = poliastro streamlit nbdev
+keywords = rocketpy streamlit nbdev
 author = Luke Woods
 author_email = lukedwoods@gmail.com
 copyright = MIT
